tests/rosetta/out/Elixir/avl-tree.error
run: exit status 1
** (SyntaxError) invalid syntax found on /tmp/avl-tree.exs:3:12:
    error: unexpected ( after alias Node. Function names and identifiers in Elixir start with lowercase characters or underscore. For example:

        hello_world()
        _starting_with_underscore()
        numb3rs_are_allowed()
        may_finish_with_question_mark?()
        may_finish_with_exclamation_mark!()

    Unexpected token: (
    │
  3 │ 	@spec Node(integer()) :: map()
    │            ^
    │
    └─ /tmp/avl-tree.exs:3:12
    (elixir 1.18.3) lib/code.ex:1525: Code.require_file/2
